<resources>
    <string name="app_name">Het Persoonlijke Zakboekje</string>
	<string name="loading_in_progress">Bezig met laden...</string>
	<string name="note_details">Details van notitie</string>
	<string name="is_public_note">Openbare notitie</string>
	<string name="owner">Eigenaar</string>
	<string name="created_by">Aangemaakt door</string>
	<string name="created_at">Aangemaakt op</string>
	<string name="draw_options">Opties voor tekenen</string>
	<string name="brush_color">Penceel kleur</string>
	<string name="brush_size">Penceel grootte</string>
	<string name="text_color">Tekstkleur</string>
	<string name="style">Stijl</string>
	<string name="authorizations">Autorisaties</string>
	<string name="saving_in_progress">Bezig met opslaan...</string>
	<string name="username">Gebruikersnaam</string>
	<string name="password">Wachtwoord</string>
	<string name="authentication_url">URL autorisaties</string>
	<string name="db_url">URL database</string>
	<string name="show_notes">Toon notities</string>
	<string name="yes">Ja</string>
	<string name="no">Nee</string>
	<string name="previous_versions">Vorige versies</string>
	<string name="no_interwebs">Geen internetverbinding!</string>
	<string name="connection_method">Verbinding type</string>
	<string name="connection_method_grpc">gRPC</string>
	<string name="connection_method_websocket">Websocket</string>
</resources>
