<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="10dp"
	android:paddingLeft="10dp"
	android:paddingTop="10dp"
	android:paddingEnd="10dp"
	android:paddingRight="10dp"
	android:paddingBottom="10dp">

	<Switch
		android:id="@+id/activity_note_details_private"
		android:layout_width="match_parent"
		android:layout_height="18dp"
		android:layout_marginStart="8dp"
		android:text="@string/is_public_note"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView11" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/owner"
		android:textColor="@android:color/black"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/activity_note_details_private" />

	<TextView
		android:id="@+id/activity_note_details_owner"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:gravity="right"
		android:text="TextView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView4"
		app:layout_constraintTop_toBottomOf="@+id/activity_note_details_private" />

	<TextView
		android:id="@+id/textView6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/created_by"
		android:textColor="@android:color/black"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4" />

	<TextView
		android:id="@+id/activity_note_details_created_by"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:gravity="right"
		android:text="TextView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView6"
		app:layout_constraintTop_toBottomOf="@+id/activity_note_details_owner" />

	<TextView
		android:id="@+id/textview101"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/created_at"
		android:textColor="@android:color/black"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView6" />

	<TextView
		android:id="@+id/activity_note_details_created_at"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:gravity="right"
		android:text="TextView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toEndOf="@+id/textview101"
		app:layout_constraintTop_toBottomOf="@+id/activity_note_details_created_by" />

	<TextView
		android:id="@+id/textView10"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/authorizations"
		android:textColor="@android:color/black"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textview101" />

	<Spinner
		android:id="@+id/activity_note_details_spinner"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="4dp"
		android:gravity="right"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView10"
		app:layout_constraintTop_toBottomOf="@+id/activity_note_details_created_at" />

	<TextView
		android:id="@+id/textView11"
		android:layout_width="wrap_content"
		android:layout_height="50dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/note_details"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageButton
		android:id="@+id/activity_note_details_ib_save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:background="@color/very_transparent"
		android:backgroundTint="@color/very_transparent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@android:drawable/ic_menu_save" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/note_details_recycler"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView9" />

	<TextView
		android:id="@+id/textView9"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:gravity="left"
		android:text="@string/previous_versions"
		android:textColor="@android:color/black"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>