<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingStart="4dp"
	android:paddingLeft="4dp"
	android:paddingTop="4dp"
	android:paddingEnd="4dp"
	android:paddingRight="4dp"
	android:paddingBottom="4dp">

	<TextView
		android:id="@+id/main_recycler_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:text="TextView"
		android:textColor="@android:color/black"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/owner"
		android:textColor="@android:color/black"
		android:textSize="12sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/main_recycler_title" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/created_by"
		android:textColor="@android:color/black"
		android:textSize="12sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView5" />

	<TextView
		android:id="@+id/textView8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/created_at"
		android:textColor="@android:color/black"
		android:textSize="12sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView7" />

	<TextView
		android:id="@+id/main_recycler_owner"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:gravity="right"
		android:text="TextView"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView5"
		app:layout_constraintTop_toBottomOf="@+id/main_recycler_title" />

	<TextView
		android:id="@+id/main_recycler_created_by"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:gravity="right"
		android:text="TextView"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView7"
		app:layout_constraintTop_toBottomOf="@+id/main_recycler_owner" />

	<TextView
		android:id="@+id/main_recycler_created_at"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:gravity="right"
		android:text="TextView"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView8"
		app:layout_constraintTop_toBottomOf="@+id/main_recycler_created_by" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:paddingBottom="@dimen/layoutMargin4dp"
		android:text="@string/is_public_note"
		android:textColor="@android:color/black"
		android:textSize="12sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView8" />

	<View
		android:id="@+id/divider"
		android:layout_width="0dp"
		android:layout_height="2dp"
		android:layout_marginEnd="8dp"
		android:background="@color/colorPrimary"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/main_recycler_is_public" />

	<TextView
		android:id="@+id/main_recycler_is_public"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:gravity="right"
		android:paddingBottom="@dimen/layoutMargin4dp"
		android:text="TextView"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView"
		app:layout_constraintTop_toBottomOf="@+id/main_recycler_created_at" />


</androidx.constraintlayout.widget.ConstraintLayout>